--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
-version: "3.8"
+version: '3.8'
+
 services:
-  app:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    stdin_open: true
+    tty: true
+
+  backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: laravel_app
-    volumes:
-      - ./backend:/var/www/html
     ports:
       - "8000:8000"
-    depends_on:
-      - db
     environment:
       - DB_CONNECTION=pgsql
       - DB_HOST=db
@@ -18,21 +23,15 @@ services:
       - DB_DATABASE=booking
       - DB_USERNAME=postgres
       - DB_PASSWORD=qwerty
+    depends_on:
+      - db
+
   db:
-    image: postgres
+    image: postgres:17
     container_name: postgres_db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: qwerty
       POSTGRES_DB: booking
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: vue_app
     ports:
-      - "8080:8080"
-volumes:
-  pgdata:
+      - "5432:5432"
