--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.8",
     "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
-    "vue-toastification": "^2.0.0-rc.4"
+    "vue-toastification": "^2.0.0-rc.4",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
